@@ -10,6 +10,8 @@
 * File tree item in library view
 * Main window has been rewritten to be like launcher
 * Local library activity has been moved to a separate process
+* Czech resources have been updated
+* Chinese resources have been updated
 * French resources have been updated (by Mathias Monnerville)
 * German resources have been updated (by Ingolf Kübler)
 * Font directory option is only shown if external fonts are supported
